# mk-plan-master

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-TW.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
docs/: prd.md  walkthrough.md
examples/sample_initiatives/: LIN-001.md  LIN-002.md  LIN-003.md
src/mk_plan_master/: __init__.py  config.py  server.py
src/mk_plan_master/adapters/: __init__.py  base.py  jira.py  linear.py  markdown_local.py  notion.py
src/mk_plan_master/bridge/: __init__.py  spec_draft.py
src/mk_plan_master/index/: __init__.py  decisions.py
src/mk_plan_master/scoring/: __init__.py  impact_effort.py  rice.py
src/mk_plan_master/tools/: __init__.py  analysis.py  bridge.py  history.py  initiatives.py  plan_knowledge.py  roadmap.py  scoring.py  telemetry.py
tests/: conftest.py  test_add_initiative.py  test_analyze_initiative.py  test_phase2.py  test_phase3.py  test_smoke.py
