[project]
name = "mk-plan-master"
version = "0.1.0"
description = "MCP server bridging product ideas (Linear / JIRA / Notion / Markdown) to prioritized roadmaps and spec drafts, with auto-handoff to mk-spec-master (AI 規劃大師)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jack Kao", email = "52775937+kao273183@users.noreply.github.com" }]
keywords = [
    "mcp",
    "product-planning",
    "roadmap",
    "rice",
    "prioritization",
    "spec-driven-development",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kao273183/mk-plan-master"
Repository = "https://github.com/kao273183/mk-plan-master"

[project.scripts]
mk-plan-master = "mk_plan_master.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_plan_master"]
